[package]
name = "wt_ext_cli"
version = "0.4.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_ext_cli"
authors = ["flareflo"]
description = "Extracts WT game files such as VROMFS and BLK"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 2

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"

[features]
default = []
avif2dds = ["image"]

[dependencies]
clap = {version = "4.1.9", features = ["cargo"]}
wt_blk = {git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk", branch = "master"}
#wt_blk = {path = "../wt_blk"}
thiserror = "^1.0"
rayon = "^1.7.0"
open = "^5"
color-eyre = { version = "^0.6", default-features = false }
time = { version = "0.3.23", default-features = false, features = ["local-offset"]}

tracing = "^0.1.37"
tracing-subscriber = {version  = "^0.3.16", features = ["tracing-log", "env-filter", "fmt", "std"]}
tracing-appender = { version = "0.2.2"}

serde_json = "^1.0"
serde = { version = "^1.0", features = ["serde_derive"] }
const_format = { version = "0.2.31", default-features = false, features = ["fmt"] }
zip = { version = "0.6.6", features = ["deflate"], default-features = false}
wt_version = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_version.git" }

[dependencies.image]
git = "https://github.com/image-rs/image.git"
rev = "84438eba205e971a8a90a7039719e26157df1cbf"
features = ["avif-decoder", "dds"]
default-features = false
optional = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.3.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "skip"
