[package]
name = "wt_ext_cli"
version = "0.5.9"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_ext_cli"
authors = ["flareflo"]
description = "Extracts WT game files such as VROMFS and BLK"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 2

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
debug = false
strip = true

# The profile CI will run with
[profile.ci]
inherits = "dev"
opt-level = 2

[features]
default = []

[dependencies]
clap = {version = "4.4", features = ["cargo"]}
wt_blk = {git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk", branch = "master"}
#wt_blk = {path = "../wt_blk"}
thiserror = "1.0"
rayon = "1.8"
open = "5"
color-eyre = { version = "^0.6", default-features = false }
time = { version = "0.3", default-features = false, features = ["local-offset"]}

tracing = "0.1"
tracing-subscriber = {version  = "0.3", features = ["tracing-log", "env-filter", "fmt", "std"]}
tracing-appender = { version = "0.2.3"}

serde_json = "^1.0"
serde = { version = "^1.0", features = ["serde_derive"] }
const_format = { version = "0.2.31", default-features = false, features = ["fmt"] }
zip = { version = "2.1.6", features = ["deflate"], default-features = false}
wt_version = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_version.git" }
atty = "0.2.14"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "skip"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
