[package]
name = "wt_ext_cli"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Warthunder-Open-Source-Foundation/wt_ext_cli"
authors = ["flareflo"]
description = "Extracts WT game files such as VROMFS and BLK"

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 2

[profile.bench]
opt-level = 3
debug = "full"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
debug = false
strip = true

# The profile CI will run with
[profile.ci]
inherits = "dev"
opt-level = 2

[features]
default = []

[dependencies]
clap = { version = "4.4", features = ["cargo"] }
wt_blk = { git = "https://github.com/Warthunder-Open-Source-Foundation/wt_blk", branch = "master" }
#wt_blk = { path = "../wt_blk" }
thiserror = "2.0"
rayon = "1.8"
open = "5.3"
color-eyre = { version = "^0.6", default-features = false }

serde_json = "^1.0"
serde = { version = "^1.0", features = ["serde_derive"] }
const_format = { version = "0.2", default-features = false, features = ["fmt"] }
zip = { version = "^2.2", features = ["deflate"], default-features = false }
atty = "0.2"

env_logger = "0.11.5"
log = "0.4.22"
